--- a/landing.html
+++ b/landing.html
@@ -49,7 +49,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">SUMMARY: WEATHER PLOTS <br> (LATITUDE VS. X)</h3>
                     <hr>
-                    <img src="../Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
                     <p> The purpose of this project was to analyze how weather across 500+ cities across the world
                       changes as you get closer to the equator. To accomplish this analysis, OpenWeatherMap API was
                       utilized to assemble the dataset to create a representative model of weather across world cities.</p>
@@ -71,13 +71,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
                                 <a href="temperature.html">
-                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                                <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
                                 <a href="humidity.html">
-                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
@@ -85,14 +85,14 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
                                 <a href="cloudiness.html">
-                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                                 </a>
                                 <!-- <div class="title">vs. Cloudiness</div> -->
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
                                 <a href="wind.html">
-                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                    <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
