--- a/temperature.html
+++ b/temperature.html
@@ -8,12 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Comparison</title>
+    <title>Max Temperature</title>
 </head>
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: rgb(255, 255, 255);" href="landing.html">LATITUDE</a>
+            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="landing.html">LATITUDE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,43 +45,54 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="box">
-                <h3 class="title">COMPARISON: LATITUDE VS. X</h3>
-                <hr>
-                <p>Click any plot to get an in-depth analysis</p>
-                <div class="container" style="padding-bottom: 10px;">
-                    <div class="row">
-                        <div class="col-lg-6" style="padding-bottom: 30px;">
-                            <div class="title">vs. Max Temperature</div>
-                            <a href="temperature.html">
-                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
-                            </a>
+            <div class="col-lg-7 col-md-12">
+                <div class="box">
+                    <h3 class="title">LATITIDE VS. MAX TEMPERATURE</h3>
+                    <hr>
+                    <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <p>There is a correlation between latitude and temperature. As one approaches the equator, which is represented by 0 Degrees Latitude,
+                    the temperature becomes significantly warmer. However, the weather peaks at -20 Degrees Latitude, rather than at 0 Degrees Latitude, 
+                    which may be due to obliquity, which is the angle of tilt of the Earth's axis of rotation.</p>
+                </div>
+            </div>
+            <div class="col-lg-5 col-md-12">
+                <div class="box">
+                    <h3 class="title">VISUALIZATIONS</h3>
+                    <hr>
+                    <div class="container">
+                        <div class="row" style="padding-bottom: 70px;">
+                            <div class="col-6">
+                                <div class="title">Latitude vs. Max Temperature</div>
+                                <a href="temperature.html">
+                                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <div class="title">Latitude vs. Humidity</div>
+                                <a href="humidity.html">
+                                    <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                </a>
+                            </div>
                         </div>
-                        <div class="col-lg-6" style="padding-bottom: 30px;">
-                            <div class="title">vs. Humidity</div>
-                            <a href="humidity.html">
-                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity Graph">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6" style="padding-bottom: 30px;">
-                            <div class="title">vs. Cloudiness</div>
-                            <a href="cloudiness.html">
-                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
-                            </a>
-                        </div>
-                        <div class="col-lg-6" style="padding-bottom: 30px;">
-                            <div class="title">vs. Wind Speed</div>
-                            <a href="wind.html">
-                                <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
-                            </a>
+                        <div class="row" style="padding-bottom: 70px;">
+                            <div class="col-6">
+                                <div class="title">Latitude vs. Cloudiness</div>
+                                <a href="cloudiness.html">
+                                    <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                </a>
+                            </div>
+                            <div class="col-6">
+                                <div class="title">Latitude vs. Wind Speed</div>
+                                <a href="wind.html">
+                                    <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <footer>Comparison - Aizelmarie Magsino</footer>
+    <footer>Max Temperature - Aizelmarie Magsino</footer>
 </body>
 </html>
