--- a/WebVisualizations/humidity.html
+++ b/WebVisualizations/humidity.html
@@ -8,12 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Weather Dashboard</title>
+    <title>Humidity</title>
 </head>
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="landing.html">LATITUDE</a>
+            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="index.html">LATITUDE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,20 +46,12 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-7 col-md-12">
-                <div class="box" style="padding-bottom: 20px;">
-                    <h3 class="title">SUMMARY: WEATHER PLOTS <br> (LATITUDE VS. X)</h3>
+                <div class="box">
+                    <h3 class="title">LATITUDE VS. HUMIDITY</h3>
                     <hr>
-                    <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
-                    <p> The purpose of this project was to analyze how weather across 500+ cities across the world
-                      changes as you get closer to the equator. To accomplish this analysis, OpenWeatherMap API was
-                      utilized to assemble the dataset to create a representative model of weather across world cities.</p>
-                      <br>
-                    <p> Matplotlib was used to build a series of plots to showcase the relationships regarding several variables
-                      of weather vs. latitude. Relationships analyzed included: Temperature (F) vs. Latitude, Humidity (%) vs. Latitude,
-                      Cloudiness (%) vs. Latitude, and Wind Speed (mph) vs. Latitude.</p>
-                      <br>
-                    <p> Data and visualizations are are provided as part of the analysis, including explanations and descriptions
-                      of trends and correlations.</p>
+                    <img src="../Resources/assets/images/Fig2.png" class="vizualization rounded float-left" alt="Humidity Graph">
+                    <p>There seems to be no relationship between latitude and humidity. A variety of measurements of humidity can be found
+                    regardless of latitude. Regarding the data, there are some points with 0% humidity towards the north pole.<br><br><br><br></p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
@@ -71,13 +63,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
                                 <a href="temperature.html">
-                                <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                                  <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
                                 <a href="humidity.html">
-                                <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
@@ -85,14 +77,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
                                 <a href="cloudiness.html">
-                                <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                                 </a>
-                                <!-- <div class="title">vs. Cloudiness</div> -->
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
                                 <a href="wind.html">
-                                    <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
@@ -101,6 +92,6 @@
             </div>
         </div>
     </div>
-    <footer> Web Design Challenge - Aizelmarie Magsino </footer>
+    <footer>Humidity - Aizelmarie Magsino</footer>
 </body>
 </html>
