--- a/WebVisualizations/temperature.html
+++ b/WebVisualizations/temperature.html
@@ -8,12 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Wind Speed</title>
+    <title>Max Temperature</title>
 </head>
 <body>
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="landing.html">LATITUDE</a>
+            <a class="navbar-brand" style="background-color: rgb(255,255,255);" href="index.html">LATITUDE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -47,11 +47,12 @@
         <div class="row">
             <div class="col-lg-7 col-md-12">
                 <div class="box">
-                    <h3 class="title">LATITUDE VS. WIND SPEED</h3>
+                    <h3 class="title">LATITIDE VS. MAX TEMPERATURE</h3>
                     <hr>
-                    <img src="Resources/assets/images/Fig4.png" class="vizualization rounded float-left" alt="Wind Graph">
-                    <p>Wind speed is generally between 0 and 15mph regardless of latitude, with some few points beyond that range.
-                    The highest recorded wind speed of about 50mph.<br><br><br><br><br></p>
+                    <img src="../Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <p>There is a correlation between latitude and temperature. As one approaches the equator, which is represented by 0 Degrees Latitude,
+                    the temperature becomes significantly warmer. However, the weather peaks at -20 Degrees Latitude, rather than at 0 Degrees Latitude, 
+                    which may be due to obliquity, which is the angle of tilt of the Earth's axis of rotation.</p>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
@@ -63,13 +64,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
                                 <a href="temperature.html">
-                                  <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                                  <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
                                 <a href="humidity.html">
-                                    <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
@@ -77,13 +78,13 @@
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
                                 <a href="cloudiness.html">
-                                    <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
                                 <a href="wind.html">
-                                    <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
@@ -92,6 +93,6 @@
             </div>
         </div>
     </div>
-    <footer>Wind Speed - Aizelmarie Magsino</footer>
+    <footer>Max Temperature - Aizelmarie Magsino</footer>
 </body>
 </html>
