--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="main.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -24,17 +24,17 @@
                             PLOTS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="temperature.html">Max Temperature</a>
-                            <a class="dropdown-item" href="humidity.html">Humidity</a>
-                            <a class="dropdown-item" href="cloudiness.html">Cloudiness</a>
-                            <a class="dropdown-item" href="wind.html">Wind Speed</a>
+                            <a class="dropdown-item" href="WebVisualizations/temperature.html">Max Temperature</a>
+                            <a class="dropdown-item" href="WebVisualizations/humidity.html">Humidity</a>
+                            <a class="dropdown-item" href="WebVisualizations/cloudiness.html">Cloudiness</a>
+                            <a class="dropdown-item" href="WebVisualizations/wind.html">Wind Speed</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="comparison.html">COMPARISON</a>
+                        <a class="nav-link" href="WebVisualizations/comparison.html">COMPARISON</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="data.html">DATA</a>
+                        <a class="nav-link" href="WebVisualizations/data.html">DATA</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/amagsino/Web-Design-Challenge">REPO</a>
@@ -49,7 +49,7 @@
                 <div class="box" style="padding-bottom: 20px;">
                     <h3 class="title">SUMMARY: WEATHER PLOTS <br> (LATITUDE VS. X)</h3>
                     <hr>
-                    <img src="../Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
+                    <img src="Resources/assets/images/Fig1.png" class="vizualization rounded float-left" alt="Max Temperature Graph">
                     <p> The purpose of this project was to analyze how weather across 500+ cities across the world
                       changes as you get closer to the equator. To accomplish this analysis, OpenWeatherMap API was
                       utilized to assemble the dataset to create a representative model of weather across world cities.</p>
@@ -70,29 +70,29 @@
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-6">
                                 <div class="title">Latitude vs. Max Temperature</div>
-                                <a href="temperature.html">
-                                <img class="panel" src="../Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
+                                <a href="WebVisualizations/temperature.html">
+                                <img class="panel" src="Resources/assets/images/Fig1.png" alt="Max Temperature Graph">
                                 </a>
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Humidity</div>
-                                <a href="humidity.html">
-                                <img class="panel" src="../Resources/assets/images/Fig2.png" alt="Humidity Graph">
+                                <a href="WebVisualizations/humidity.html">
+                                <img class="panel" src="Resources/assets/images/Fig2.png" alt="Humidity Graph">
                                 </a>
                             </div>
                         </div>
                         <div class="row" style="padding-bottom: 70px;">
                             <div class="col-6">
                                 <div class="title">Latitude vs. Cloudiness</div>
-                                <a href="cloudiness.html">
-                                <img class="panel" src="../Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
+                                <a href="WebVisualizations/cloudiness.html">
+                                <img class="panel" src="Resources/assets/images/Fig3.png" alt="Cloudiness Graph">
                                 </a>
                                 <!-- <div class="title">vs. Cloudiness</div> -->
                             </div>
                             <div class="col-6">
                                 <div class="title">Latitude vs. Wind Speed</div>
-                                <a href="wind.html">
-                                    <img class="panel" src="../Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
+                                <a href="WebVisualizations/wind.html">
+                                    <img class="panel" src="Resources/assets/images/Fig4.png" alt="Wind Speed Graph">
                                 </a>
                             </div>
                         </div>
